--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -4,7 +4,7 @@
 </nav> -->
 <div class="container">
   <div class="row">
-      <div class="col-md-9" id="editorElement">
+      <div class="col-12 col-md-9" id="editorElement">
           <div class="col-nd-auto" id="topEditor">
                   <label for="tituloPost">Título</label>
                   <input type="text" name="tituloPost" id="tituloPost" [(ngModel)]="post.titulo" placeholder="Título da postagem">
