Tentando arrumar o problema das tags

--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -6,7 +6,7 @@
                 <a routerLink="/view_posts">Todas as publicações</a>
             </li>
             <li>
-                <a routerLink="/new_post">Criar nova publicação</a>
+                <a routerLink="/administration/autor/new_post">Criar nova publicação</a>
             </li>
             <li>
                 <a routerLink="../">Meus dados</a>
