--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -38,7 +38,7 @@ div#flex-container-filter {
     background-color: #f9f9f9;
     min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 2;
+    z-index: 20000000;
     top: 100%; /* Coloca o conteúdo logo abaixo do botão */
     left: 0;
 }
