--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -14,6 +14,7 @@
         </ul>
         <div id="subMenu" class="flex">
             <ul>
+                <li><a href="https://discord.gg/jZtNPNRj"><i class="bi bi-discord"></i></a></li>
                 <li><i class="bi bi-search"></i>Busca</li>
                 <li><i class="bi bi-box-arrow-right"></i>Sair</li>
             </ul>
