Adicionando coisas sobre o curso

--- a/ifac_si_app/src/app/component/course/course.component.html
+++ b/ifac_si_app/src/app/component/course/course.component.html
@@ -1,1 +1,17 @@
-<p>course works!</p>
+<main>
+    <img src="../../../assets/images/spi.png" alt="Curso SPI IFAC">
+
+    <section id="sobreCurso">
+        <h3>SOBRE O CURSO</h3>
+        O curso Tecnologia em Sistemas para Internet habilita seu concluinte a atuar com desenvolvimento de programas, de interfaces e aplicativos, do comércio e do marketing eletrônicos, além de páginas e portais para internet e intranet; gerenciar projetos de sistemas, inclusive com acesso a banco de dados, desenvolvendo projetos de aplicações para a rede mundial de computadores e integra mídias nos sítios da internet; atuar com tecnologias emergentes como: computação móvel, redes sem fio e sistemas distribuídos; cuidar da implantação, atualização, manutenção e segurança dos sistemas para internet; ter postura humanística e ética com capacidade de aprender permanentemente, com raciocínio lógico que lhe permita a compreensão e resolução de problemas; ser capaz de atuar de forma empreendedora no mundo do trabalho, em iniciativas públicas ou privadas, bem como no terceiro setor.
+    
+        <div id="profissionais">
+            <h3>CORPO DOCENTE</h3>
+            <div class="equipe">
+                <div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
