Començando a adicionar docentes

--- a/ifac_si_app/src/app/component/course/course.component.html
+++ b/ifac_si_app/src/app/component/course/course.component.html
@@ -8,8 +8,8 @@
         <div id="profissionais">
             <h3>CORPO DOCENTE</h3>
             <div class="equipe">
-                <div>
-
+                <div class="docente">
+                    Teste
                 </div>
             </div>
         </div>
