--- a/ifac_si_app/src/app/component/course/course.component.css
+++ b/ifac_si_app/src/app/component/course/course.component.css
@@ -39,3 +39,13 @@ div.equipe {
 section#sobreCurso div#profissionais h3 {
     text-align: center;
 }
+
+div.equipe > div.docente{
+    background-color: #3F9F4C;
+    margin: 10px;
+    width: 25%;
+
+}
+
+
+
