--- a/ifac_si_app/src/app/component/course/course.component.css
+++ b/ifac_si_app/src/app/component/course/course.component.css
@@ -19,7 +19,7 @@ main img {
 }
 
 section#sobreCurso {
-    margin: 10px;
+    margin: 20px;
     width: 100%;
 }
 
@@ -29,7 +29,7 @@ section#sobreCurso h3 {
 
 section#sobreCurso div#profissionais > div.equipe {
     background-color: #E7DFC6;
-    padding: 25px
+    padding: 25px;
 }
 
 div.equipe {
@@ -42,6 +42,10 @@ section#sobreCurso div#profissionais h3 {
     text-align: center;
 }
 
+section#sobreCurso div#profissionais {
+    margin-top: 50px;
+}
+
 div.equipe > div.docente{
     display: flex;
     justify-content: center;
@@ -51,8 +55,37 @@ div.equipe > div.docente{
     box-sizing: border-box;
     padding: 10px;
     width: 100%;
-
 }
 
+div.docente p{
+    color: aliceblue;
+    font-weight: bold;
+}
+
+.avatar-circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin-right: 10px;
+    border: 1px solid black;
+}
+
+.avatar-circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+div.equipe .docente:nth-child(odd) .avatar-circle {
+    background-color: #CBCBCB;
+}
+
+div.equipe .docente:nth-child(even) .avatar-circle {
+    background-color: #F5BA27;
+}
 
 
