--- a/ifac_si_app/src/app/component/course/course.component.html
+++ b/ifac_si_app/src/app/component/course/course.component.html
@@ -9,7 +9,9 @@
             <h3>CORPO DOCENTE</h3>
             <div class="equipe">
                 <div class="docente" *ngFor="let docente of docentes">
-                    <img src="../../../assets/images/avatar.png" alt="Foto do docente" width="100px" height="100px">
+                    <div class="avatar-circle">
+                        <img src="../../../assets/images/avatar.png" alt="Foto do docente">
+                    </div>
                     <p>{{docente.nome}}</p>
                     <p>{{docente.nivel}}</p>
                     <p>{{docente.cargo}}</p>
@@ -17,4 +19,9 @@
             </div>
         </div>
     </section>
+
+    <div>
+        <a href="../../../assets/arquivos_curso/01 - PPC - Sistemas para Internet.pdf" target="_blank">Projeto Pedagógico do Curso</a>
+        <a href="../../../assets/arquivos_curso/matriz-do-curso-sistemas-para-internet-r-b.pdf" target="_blank">Matriz Curricular do Curso</a>
+    </div>
 </main>
