--- a/ifac_si_app/src/app/component/course/course.component.css
+++ b/ifac_si_app/src/app/component/course/course.component.css
@@ -70,7 +70,8 @@ div.docente p{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    margin-right: 10px;
+    /* margin-right: 10px; */
+    margin-bottom: 20px;
     border: 1px solid black;
 }
 
