--- a/ifac_si_app/src/app/component/course/course.component.html
+++ b/ifac_si_app/src/app/component/course/course.component.html
@@ -20,7 +20,7 @@
         </div>
     </section>
 
-    <div>
+    <div id="dados_curso">
         <a href="../../../assets/arquivos_curso/01 - PPC - Sistemas para Internet.pdf" target="_blank">Projeto Pedagógico do Curso</a>
         <a href="../../../assets/arquivos_curso/matriz-do-curso-sistemas-para-internet-r-b.pdf" target="_blank">Matriz Curricular do Curso</a>
     </div>
