--- a/ifac_si_app/src/app/component/view-post/view-post.component.html
+++ b/ifac_si_app/src/app/component/view-post/view-post.component.html
@@ -1,1 +1,7 @@
-<p>view-post works!</p>
+<div>
+    <h2>{{post.titulo}}</h2>
+    <h5>{{post.legenda}}</h5>
+    <p>{{post.texto}}</p>
+    <p>{{post.tags}}</p>
+    <p>{{post.categoria}}</p>
+</div>
