--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -19,8 +19,10 @@
                         <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
                     </div>
                 </div>
-                <p> {{post.titulo}} </p>
-                <p> {{post.data}} </p>
+                <div class="postData">
+                    <p> {{post.titulo}} </p>
+                    <p> {{post.data | date: 'dd/MM/yyyy'}} </p>
+                </div>
             </div>
         </div>
     </div>
