--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -13,7 +13,7 @@
                   <input type="text" name="LegendaPost" id="LegendaPost" [(ngModel)]="post.legenda" placeholder="Legenda ou resumo da postagem">
                   
                   <label for="capaPost">Imagem de Capa</label>
-                  <input type="file" name="capaPost" id="capaPost">
+                  <input type="file" name="capaPost" id="capaPost" #imagemCapa>
           </div>
           <div class="row">
               <div class="col-nd-12">
