--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -5,6 +5,13 @@ button {
     color: #623CEA;
     background-color: transparent;
     margin: 30px 20px 5px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #623CEA;
+    color: white;
 }
 
 button:first-child i:first-child {
@@ -19,7 +26,7 @@ button i:last-child {
 
 div#flex-container-filter {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: flex-start;
     margin: 10px 0;
     width: fit-content;
@@ -33,7 +40,7 @@ div#flex-container-filter {
     display: inline-block;
     /* width: 190px; */
     flex-shrink: 0;
-    /* margin: 0 10px; */
+    margin: 0 10px;
 }
 
 .dropdown-content {
@@ -50,6 +57,7 @@ div#flex-container-filter {
     color: black;
     padding: 12px 16px;
     display: block;
+    font-size: 14px;
 }
 
 .dropdown-content p:hover {
@@ -61,3 +69,36 @@ div#flex-container-filter {
     overflow-y: auto;
 }
 
+/* Para telas pequenas (menor que 600px)
+@media (max-width: 600px) {
+    button {
+        width: 100%; 
+        font-size: 18px; 
+        margin: 10px 0;
+    }
+
+    div#flex-container-filter {
+        flex-direction: column; 
+        align-items: stretch;
+    }
+
+    .dropdown {
+        width: 100%; 
+    }
+
+    .dropdown-content {
+        min-width: 100%; 
+    }
+}
+
+
+@media (max-width: 1024px) {
+    button {
+        font-size: 16px; 
+    }
+
+    div#flex-container-filter {
+        flex-direction: column; 
+        align-items: stretch; 
+    }
+} */
