--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -14,6 +14,10 @@ button:hover {
     color: white;
 }
 
+button i {
+    font-weight: bold;
+}
+
 button:first-child i:first-child {
     margin-right: 10px;
     margin-left: 0;
