Arrumando Layout de add-new-post

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -4,7 +4,8 @@
 </nav> -->
 <div class="container">
   <div class="row">
-      <div class="col-12 col-md-9" id="editorElement">
+    <!-- class="col-12 col-lg-9" -->
+      <div class="col-12 col-lg-9 col-md-7" id="editorElement">
           <div class="col-nd-auto" id="topEditor">
                   <label for="tituloPost">Título</label>
                   <input type="text" name="tituloPost" id="tituloPost" [(ngModel)]="post.titulo" placeholder="Título da postagem">
@@ -27,7 +28,8 @@
               </div>
           </div>
       </div>
-      <div class="col-12 col-md-3" id="postInfo">
+      <!-- class="col-12 col-lg-3"  -->
+      <div class="col-12 col-lg-3 col-md-5" id="postInfo">
           <div id="accordion">
               <div class="card">
                   <div class="card-header" id="headingOne">
