Depois arrumar select e tag p, para status, publicação e visibilidade

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -54,7 +54,7 @@
                         <div class="viewPost" id="statusPost">
                             <div class="statusDiv">
                                 <p>Visibilidade:</p>
-                                <select id="isibilidade">
+                                <select id="visibilidade">
                                     <option value="publica">Pública</option>
                                     <option value="privada">Privada</option>
                                 </select>
