--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -7,6 +7,8 @@ button {
     margin: 30px 20px 5px 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 button:hover {
@@ -61,7 +63,7 @@ div#flex-container-filter {
     color: black;
     padding: 12px 16px;
     display: block;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .dropdown-content p:hover {
