Mudando font-size no menu

--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.css
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.css
@@ -60,6 +60,7 @@ nav ul#menuPrincipal {
     display: flex;
     justify-content: space-between;
     width: 100%; 
+    font-size: 16.5px;
 }
 
 .bi {
