Melhorando alguns detalhes do formulário de usuário

--- a/ifac_si_app/src/app/component/user-form/user-form.component.html
+++ b/ifac_si_app/src/app/component/user-form/user-form.component.html
@@ -2,12 +2,20 @@
     <div class="popUp">
         <form #form="ngForm" (ngSubmit)="onSubmit(form)">
             <h3>Adicionar novo usuário</h3>
-            <label>Nome de usuário</label><input type="text" id="nomeUsuario" [(ngModel)]="usuario.nomeUsuario" name="nomeUsuario">
-            <label>Email</label><input type="text" id="email" [(ngModel)]="usuario.email" name="email">
-            <label>Nova senha</label><input type="text" id="senha" [(ngModel)]="usuario.senha" name="senha" #senha>
-            <label>Confirmar senha</label><input type="text" id="confirmarSenha" name="confirmarSenha" #confirmarSenha>
+            <label>Nome</label><input type="text" id="nomeUsuario" [(ngModel)]="usuario.nomeUsuario" name="nomeUsuario" placeholder="Nome de Usuário">
+            <label>Email</label><input type="text" id="email" [(ngModel)]="usuario.email" name="email" placeholder="Email do usuário">
+            <label>Senha</label>
+            <input #senha [type]="showPassword ? 'text' : 'password'" name="senha" id="senha" required [(ngModel)]="usuario.senha" placeholder="Senha" style="padding-right: 2.5em;">
+            <span (click)="togglePasswordVisibility()" class="password-toggle" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                <i [class]="showPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+            </span>
+            <label>Confirmar Senha</label>
+            <input #confirmarSenha [type]="showPassword ? 'text' : 'password'" name="confirmarSenha" id="confirmarSenha" required [(ngModel)]="usuario.senha" placeholder="Confirmar Senha" style="padding-right: 2.5em;">
+            <span (click)="togglePasswordVisibility()" class="password-toggle" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                <i [class]="showPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+            </span>
             <label>Role</label>
-            <select id="cargo" [(ngModel)]="usuario.cargo" name="cargo">
+            <select id="cargo" [(ngModel)]="usuario.cargo" name="cargo" placeholder="Cargo do usuário no sistema">
               <option value=""></option>
               <option value="ADMIN">ADMINISTRADOR</option>
               <option value="AUTOR">AUTOR</option>
